--- a/pom.xml
+++ b/pom.xml
@@ -69,6 +69,11 @@
       <version>3.3.0</version>
       <scope>test</scope>
     </dependency>
+    <dependency> 
+      <groupId>com.opencsv</groupId> 
+      <artifactId>opencsv</artifactId> 
+      <version>4.1</version> 
+    </dependency> 
   </dependencies>
 
   <build>
