--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
 
   <groupId>es.upm.alumnos.profundizacion</groupId>
   <artifactId>mvn-tsdetect-plugin</artifactId>
-  <version>1.0-SNAPSHOT</version>
+  <version>1.2.1</version>
   <packaging>maven-plugin</packaging>
 
   <name>mvn-tsdetect-plugin Maven Plugin</name>
