Added some properties to test.

--- a/src/test/resources/project-to-test/pom.xml
+++ b/src/test/resources/project-to-test/pom.xml
@@ -65,6 +65,7 @@
             <jar>/path/to/TSDetect.jar</jar>
            -->
            <jar>/home/kraftex/my_programs/muii-master/Profundización en Ingeniería del Software/github-projects/TestSmellDetector.jar</jar>
+           <threshold>100</threshold>
         </configuration>
         <executions>
           <execution>
